Rewrite part of API related to task content. Instead of redirecting to another URL, task content information is returned to client.
